Group fragment added, a few corrections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="main_tittle">Ponte Pedo Mamalon</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="abu">El proposito principal por el cual construimos esta aplicacion fue el hacer sus fiestas y reuniones mas divertidas y darles una herramienta para hacer nuevos amigos, espero la disfruten jugando como nosotros nos divertidos creandola.\nThis app is dedicated to Quique and all the people involved in Las Alitas Social Club, thank you for believe in us even before we started believing in ourselves</string>
 </resources>
